<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/motivap_8dp"
        android:contentDescription="@string/motivap_cd_sv_user_tv_head"
        android:importantForAccessibility="yes"
        android:padding="@dimen/motivap_8dp"
        android:text="@string/motivap_sv_user_tv_head"
        android:textColor="@color/motivap_black"
        android:textSize="@dimen/motivap_16sp" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/motivap_16dp"
        android:layout_marginTop="@dimen/motivap_16dp"
        android:layout_marginEnd="@dimen/motivap_16dp"
        android:layout_marginBottom="@dimen/motivap_16dp"
        android:gravity="center"
        android:importantForAccessibility="yes"
        android:padding="@dimen/motivap_8dp"
        android:text="@string/motivap_sv_tv_text"
        android:textColor="@color/motivap_black"
        android:textSize="@dimen/motivap_16sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/motivap_16dp"
        android:layout_marginStart="@dimen/motivap_16dp"
        android:layout_marginBottom="@dimen/motivap_80dp"
        android:backgroundTint="@color/motivap_black"
        android:contentDescription="@string/motivap_cd_sv_btn_save"
        android:fontFamily="@font/motivap_cabin"
        android:importantForAccessibility="yes"
        android:padding="@dimen/motivap_8dp"
        android:text="@string/motivap_sv_btn_save"
        android:textSize="@dimen/motivap_14sp" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/motivap_16dp"
        android:layout_alignStart="@id/btn_save"
        android:layout_marginEnd="@dimen/motivap_16dp"
        android:layout_marginBottom="@dimen/motivap_16dp"
        android:backgroundTint="@color/motivap_black"
        android:contentDescription="@string/motivap_cd_sv_btn_save"
        android:fontFamily="@font/motivap_cabin"
        android:importantForAccessibility="yes"
        android:padding="@dimen/motivap_8dp"
        android:text="@string/motivap_sv_btn_back"
        android:textSize="@dimen/motivap_14sp" />

</RelativeLayout>