<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/motivap_white"
    android:orientation="horizontal"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:id="@+id/ll_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/motivap_gray"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_all"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/motivap_cd_sv_iv_all"
            android:importantForAccessibility="yes"
            android:src="@drawable/motivap_ic_all"
            app:tint="@color/motivap_black" />

        <ImageView
            android:id="@+id/iv_emoji"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/motivap_cd_sv_iv_emoji"
            android:importantForAccessibility="yes"
            android:src="@drawable/motivap_ic_emoji"
            app:tint="@color/motivap_dark_gray" />

        <ImageView
            android:id="@+id/iv_sunny"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/motivap_cd_sv_iv_sunny"
            android:importantForAccessibility="yes"
            android:src="@drawable/motivap_ic_sunny"
            app:tint="@color/motivap_dark_gray" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:importantForAccessibility="yes"
        android:padding="8dp"
        android:text="@string/motivap_sv_tv_head"
        android:textColor="@color/motivap_black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:importantForAccessibility="yes"
        android:padding="8dp"
        android:text="@string/motivap_sv_tv_text"
        android:textColor="@color/motivap_black"
        android:textSize="16sp" />

    <View
        android:id="@+id/v_bar"
        android:layout_width="128dp"
        android:layout_height="5dp"
        android:layout_below="@id/tv_text"
        android:layout_centerInParent="true"
        android:background="@color/motivap_black" />

    <Button
        android:id="@+id/btn_save_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/motivap_black"
        android:contentDescription="@string/motivap_cd_sv_btn_save_message"
        android:fontFamily="@font/motivap_cabin"
        android:importantForAccessibility="yes"
        android:padding="8dp"
        android:text="@string/motivap_sv_btn_save_message"
        android:textSize="14sp" />

</RelativeLayout>
